rad: update rad.conf

--- a/rad/files/rad.conf
+++ b/rad/files/rad.conf
@@ -1,7 +1,7 @@
-[cerata]
-ver="e937f7e"
-url="https://github.com/glaucuslinux/cerata"
+[core]
+ver="latest"
+url="https://github.com/glaucuslinux/core"
 
-[fleet]
-ver="f7e4591"
-url="https://github.com/glaucuslinux/fleet"
+[extra]
+ver="latest"
+url="https://github.com/glaucuslinux/extra"
